--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,25 +7,23 @@
     <title>TIMEZONE</title>
     <link href="index.css" rel="stylesheet">
   </head>
-
   <body>
     <div class = "container">
         <nav class="navbar bg-mynav">
             <div class="container-fluid">
               <a class="navbar-brand" style="font-size: xx-large; display: inline-block;" >TIMEZONE</a>
-              <div>
-                <input type="text" class="form-control me-2" placeholder="Search: Country name" id="inputbox" style="display: inline-block;">
-                <button class="btn btn-outline-success" id="btn" style="display: inline-block; position: relative; left: 75%;">Search</button>
+              <div class="fo-in">
+                <input type="text" class="form-control me-2" placeholder="Search: Country name" id="inputbox">
+                <button class="btn btn-outline-success" id="btn">Search</button>
               </div>
             </div>
         </nav>
-        <nav style= "position: relative;">
-          <div class="clock" style="background-color: azure;">
-              <b id="c" style="color: rgb(4, 72, 72); font-size: 150px; position: relative; left: 25%; top: 10%;"></b>
+        <nav class="box-cz">
+          <div class="clock-zone">
+              <b class="c-time" id="c"></b>
+              </br>
           </div>
-          <div>
-            <b id="d" style="color: rgb(4, 72, 72); font-size: x-large; position: absolute; left: 85%; bottom: 1%;"></b>
-          </div>
+          <b class="c-date" id="d"></b>
         </nav>
         <table class="table">
             <thead style="background-color: rgb(189, 234, 234);">
@@ -43,17 +40,15 @@
               </tr>
             </tfoot>
         </table>
-        <nav style= "position: relative;">
-          <div class="a-clock" style="background-color: azure;">
-            <b id="ac" style="color: rgb(4, 72, 72); font-size: 150px; position: relative; left: 25%; top: 10%;"></b>
-            <b id="ad" style="color: rgb(4, 72, 72); font-size: x-large; position: absolute; left: 85%; bottom: 1%;"></b>
+        <nav class="box-cz">
+          <div class="clock-zone" >
+            <b class="c-time" id="ac"></b>
+            </br>
           </div>
+          <b class="c-date" id="ad"></b>
         </nav>
     </div>
-
     <script src="index.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
-
 </html>
